--- a/src/Headers/Headers.module.css
+++ b/src/Headers/Headers.module.css
@@ -1,17 +1,26 @@
 .Headers {
+  height: 190px;
+  background: linear-gradient(99.31deg,
+      #126244 0%,
+      #b1dfa9 70.35%,
+      #e3f7d8 100%);
 }
 
 .HeaderProducts {
   height: 190px;
   display: flex;
-  background: linear-gradient(
-    99.31deg,
-    #126244 0%,
-    #b1dfa9 70.35%,
-    #e3f7d8 100%
-  );
+  background: linear-gradient(99.31deg,
+      #126244 0%,
+      #b1dfa9 70.35%,
+      #e3f7d8 100%);
 }
 
 .Page {
   width: 75%;
+}
+
+
+.nice {
+  border: 3px solid red;
+  margin-top: 10px;
 }
