--- a/src/Headers/Headers.module.css
+++ b/src/Headers/Headers.module.css
@@ -1,17 +1,25 @@
 .Headers {
+  padding: 0 !important;
 }
 
 .HeaderProducts {
+  padding: 0 !important;
   height: 190px;
+  background: linear-gradient(100deg, #126244 0%, #b1dfa9 70%, #e3f7d8 100%);
   display: flex;
-  background: linear-gradient(
-    99.31deg,
-    #126244 0%,
-    #b1dfa9 70.35%,
-    #e3f7d8 100%
-  );
+  justify-content: center;
 }
 
 .Page {
+  padding: 25px 0 !important;
   width: 75%;
+  padding: 25px 0;
+}
+
+.Welcome {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 20px;
+  color: #f5f5f5;
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
