--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,4 +11,12 @@ body {
 /* use for titles */
 .fontMain {
   font-family: "Mulish", sans-serif;
+}
+
+.borders {
+  border: 1px solid red;
+}
+
+.pl-0 {
+  padding-left: 0 !important;
 }
