--- a/src/Headers/Headers.module.css
+++ b/src/Headers/Headers.module.css
@@ -1,12 +1,28 @@
 .Headers {
   height: 190px;
-  background: linear-gradient(
-    99.31deg,
-    #126244 0%,
-    #b1dfa9 70.35%,
-    #e3f7d8 100%
-  );
+  background: linear-gradient(99.31deg,
+      #126244 0%,
+      #b1dfa9 70.35%,
+      #e3f7d8 100%);
 }
+
+.HeaderTitle {
+  font-family: 'Mulish', san-serif;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 90px;
+  color: #FFFFFF;
+  -webkit-text-stroke: 0.5px #F4CE46;
+}
+
+
+.round {
+  border-radius: 50px;
+}
+
+
+
+
 
 .HeaderProducts {
   padding: 0 !important;
@@ -28,9 +44,4 @@
   font-size: 20px;
   color: #f5f5f5;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-}
-
-.nice {
-  border: 3px solid red;
-  margin-top: 10px;
 }
