--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -1,12 +1,19 @@
 /* How Page */
+
+.span--why {
+    font-weight: 400;
+    font-size: 35px;
+}
+
 .span--handeeman {
+    padding-left: 10px;
     font-weight: 900;
     font-size: 48px;
 }
 
 .span--question {
-    font-weight: 700;
-    font-size: 65px;
+    font-weight: 500;
+    font-size: 55px;
 }
 
 
@@ -32,4 +39,52 @@
     border-radius: 50%;
     border: 1px solid #FFFFFF5C;
     box-shadow: 0px 3px 8px 1px #00000040;
+}
+
+.card--title {
+    color: #184D47;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 2px;
+}
+
+.card--body {
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+}
+
+.span--how {
+    font-weight: 400;
+    font-size: 35px;
+}
+
+.span--text {
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.col--align {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.span--owner,
+.span--renter {
+    font-weight: 700;
+    font-size: 28px;
+}
+
+.paragraph--text {
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+}
+
+.span--textmute {
+    font-weight: 700;
+    font-size: 16px;
+    color: #184D47;
 }
