--- a/src/Login/Login.module.css
+++ b/src/Login/Login.module.css
@@ -3,19 +3,14 @@
 	/* border: 1px solid red; */
 }
 
-body,
-html {
-	height: 100%;
-	background-image: url("./images/rental.png");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
+body {
+	background-color: lightgrey;
 }
 
-.divSignupMain {
+.divLoginMain {
 	min-width: 450px;
-	min-height: 820px;
-	background-color: rgba(255, 255, 255, 0.85);
+	min-height: 435px;
+	background-color: white;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 10px;
 	position: absolute;
@@ -29,13 +24,13 @@ html {
 	margin: 10px;
 }
 
-.signupH1 {
+.loginH1 {
 	color: #184d47;
 	padding-top: 58px;
 	font-family: "Mulish", sans-serif;
 	display: block;
-	font-size: 24px;
 	text-align: center;
+	font-size: 24px;
 	font-weight: bold;
 }
 
@@ -60,39 +55,37 @@ form {
 	padding-top: 13px;
 }
 
-.checkboxText {
-	padding-top: 21px;
-	max-width: 330px;
-	padding-left: 9px;
-	padding-bottom: 23.28px;
-	font-size: 12px;
-}
-
-.divTerms {
-	display: flex;
-	position: absolute;
-}
-
-.checkBox {
-	position: relative;
-	bottom: 50px;
-}
-
-.buttonRegister {
+.buttonLogin {
+	margin-top: 20px;
 	background-color: #f5e79d;
 	border-radius: 50px;
 	min-height: 44px;
 	min-width: 120px;
 	border-color: white;
 	font-weight: bold;
-	color: #184d47;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.divRegister {
+.divLogin {
 	display: flex;
 	justify-content: center;
 }
 
 label {
 	padding-top: 20px;
+}
+
+.forgotPass {
+	margin-top: 20px;
+	text-align: right;
+	font-size: 12px;
+}
+
+.signUpLink {
+	color: #81b395;
+}
+
+.member {
+	margin-top: 20px;
+	font-size: 12px;
 }
