updated item page

--- a/src/ItemPage/ItemPage.module.css
+++ b/src/ItemPage/ItemPage.module.css
@@ -3,6 +3,25 @@
   font-size: 0.875rem;
 }
 
-.car {
-  background-color: aquamarine;
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 3px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #81b395;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #184d47;
 }
