added classNames to all stylings

--- a/src/Signup/Signup.module.css
+++ b/src/Signup/Signup.module.css
@@ -3,14 +3,14 @@
 	/* border: 1px solid red; */
 }
 
-body,
+/* body,
 html {
 	height: 100%;
 	background-image: url("./images/rental.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-}
+} */
 
 .divSignupMain {
 	min-width: 450px;
@@ -39,8 +39,8 @@ html {
 	font-weight: bold;
 }
 
-input[type="text"],
-input[type="password"] {
+.inputItem[type="text"],
+.inputItem[type="password"] {
 	display: block;
 	justify-content: center;
 	border-radius: 25px;
@@ -50,11 +50,11 @@ input[type="password"] {
 	border-color: #eeeeee;
 }
 
-input[placeholder] {
+.inputItem[placeholder] {
 	padding-left: 22.8px;
 }
 
-form {
+.formItem {
 	display: flex;
 	justify-content: center;
 	padding-top: 13px;
@@ -93,6 +93,6 @@ form {
 	justify-content: center;
 }
 
-label {
+.labelItem {
 	padding-top: 20px;
 }
