--- a/src/AccountPage/AccountPage.module.css
+++ b/src/AccountPage/AccountPage.module.css
@@ -45,3 +45,18 @@
 .Address p {
   margin: 0;
 }
+
+.AccountPage a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.AccountPage input[type="number"],
+.AccountPage input[type="date"] {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 0 0.75rem;
+  border: 1px solid #dddddd;
+  border-radius: 50px;
+}
