--- a/src/ProductPage/ProductPage.module.css
+++ b/src/ProductPage/ProductPage.module.css
@@ -11,3 +11,23 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.ProductPage a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.customSelect {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 0 0.75rem;
+  border: 1px solid #dddddd;
+  border-radius: 50px;
+}
+
+.customSelect:focus {
+  box-shadow: 0 0 0 3px rgba(129, 179, 149, 0.5);
+  outline: none;
+  border: none;
+}
