--- a/src/AccountPage/AccountPage.module.css
+++ b/src/AccountPage/AccountPage.module.css
@@ -55,8 +55,9 @@
 .AccountPage input[type="date"] {
   display: block;
   width: 100%;
-  height: 40px;
+  height: 30px;
   padding: 0 0.75rem;
   border: 1px solid #dddddd;
   border-radius: 50px;
+  font-size: 0.875rem;
 }
