--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -1,4 +1,17 @@
-/* How Page */
+.text--what {
+    font-weight: 500;
+    font-size: 35px;
+    margin-bottom: 0px;
+}
+
+.text--handeeman {
+    margin-top: 0px;
+    padding-top: 0px;
+    font-weight: 900;
+    font-size: 64px;
+    color: #184D47;
+}
+
 
 .span--why {
     font-weight: 400;
