--- a/src/Login/Login.module.css
+++ b/src/Login/Login.module.css
@@ -1,7 +1,7 @@
-* {
+/* * {
 	box-sizing: border-box;
-	/* border: 1px solid red; */
-}
+	border: 1px solid red;
+} */
 
 .divLoginMain {
 	min-width: 450px;
