--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -101,3 +101,16 @@
     font-size: 16px;
     color: #184D47;
 }
+
+.scroll-top {
+    position: fixed;
+    bottom: 2em;
+    right: 4em;
+    background-color: transparent;
+}
+
+@media (max-width: 900px) {
+    .scroll-top {
+        display: none;
+    }
+}
