--- a/src/ProductPage/ProductPage.module.css
+++ b/src/ProductPage/ProductPage.module.css
@@ -35,3 +35,13 @@
   outline: none;
   border: none;
 }
+
+.ProductCard {
+  width: 100%;
+  height: 375px;
+}
+
+.ProductCard:hover {
+  cursor: pointer;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.4));
+}
