--- a/src/ProductPage/ProductPage.module.css
+++ b/src/ProductPage/ProductPage.module.css
@@ -45,3 +45,7 @@
   cursor: pointer;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.4));
 }
+
+.CardImage {
+  object-fit: contain !important;
+}
