--- a/src/Headers/Headers.module.css
+++ b/src/Headers/Headers.module.css
@@ -47,3 +47,16 @@
   color: #f5f5f5;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
+
+.searchButton {
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 25px;
+  padding: 0 15px;
+}
+
+.searchButton:hover {
+  background-color: #f5e79d;
+  cursor: pointer;
+}
