--- a/src/ProductPage/ProductPage.module.css
+++ b/src/ProductPage/ProductPage.module.css
@@ -5,7 +5,7 @@
 }
 
 .ProductTitle {
-  min-height: 3rem;
+  min-height: 3.25rem;
   font-size: 0.875rem !important;
   font-weight: 600;
   display: -webkit-box;
@@ -50,6 +50,20 @@
 }
 
 .CardImage {
-  padding: 0.75rem;
   object-fit: contain !important;
+}
+
+.ViewItem {
+  position: absolute;
+  width: 100%;
+  right: 0;
+  top: 20%;
+  padding: 1rem;
+  margin-left: 0.875 rem;
+  background-color: #fcf9d5;
+  color: #184d47;
+  text-align: center;
+  font-weight: 700;
+  opacity: 0.85;
+  transition: 1s;
 }
