--- a/src/ProductPage/ProductPage.module.css
+++ b/src/ProductPage/ProductPage.module.css
@@ -39,6 +39,27 @@
   border: none;
 }
 
+.customSelect2 {
+  height: fit-content;
+  padding: 0 0.75rem;
+  margin-left: 0.5rem;
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+  border-bottom: 1px solid #dddddd;
+  font-size: 0.875rem;
+  font-weight: 600;
+}
+
+.filterContainer {
+  display: flex;
+  padding: 0;
+}
+
+.filterContainer span,
+.filterContainer label {
+  white-space: nowrap;
+}
+
 .ProductCard {
   width: 100%;
   height: 375px;
@@ -57,13 +78,13 @@
   position: absolute;
   width: 100%;
   right: 0;
-  top: 20%;
-  padding: 1rem;
+  top: 0%;
+  padding: 1rem 0;
   margin-left: 0.875 rem;
-  background-color: #fcf9d5;
+  background-color: #ffffff;
+  border-radius: 3px 3px 0 0;
   color: #184d47;
   text-align: center;
   font-weight: 700;
-  opacity: 0.85;
-  transition: 1s;
+  opacity: 0.9;
 }
