--- a/src/ProductPage/ProductPage.module.css
+++ b/src/ProductPage/ProductPage.module.css
@@ -43,11 +43,17 @@
   height: fit-content;
   padding: 0 0.75rem;
   margin-left: 0.5rem;
-  border: none;
   background-color: rgba(0, 0, 0, 0);
+  border: none;
   border-bottom: 1px solid #dddddd;
+  border-radius: 0;
   font-size: 0.875rem;
   font-weight: 600;
+}
+
+.customSelect2:focus {
+  box-shadow: none;
+  background-color: #ffffff;
 }
 
 .filterContainer {
