updated product page 08-09-2022v1

--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,10 @@
   width: 2px;
   min-height: 1em;
   background-color: #353939;
-  opacity: 1;
+}
+
+.vr-light {
+  width: 1px;
+  min-height: 1em;
+  background-color: #dddddd;
 }
