--- a/src/ItemPage/ItemPage.module.css
+++ b/src/ItemPage/ItemPage.module.css
@@ -9,6 +9,24 @@
   background-color: #ffffff;
 }
 
+.OwnersSection {
+  display: flex;
+  height: 100px;
+  justify-content: space-between;
+}
+
+.OwnersSection .imgContainer {
+  height: 68px;
+  width: 68px;
+}
+
+.OwnersSection img {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 .ImageCarousel {
   padding: 0;
   background-color: #ffffff;
