--- a/src/ProductPage/ProductPage.module.css
+++ b/src/ProductPage/ProductPage.module.css
@@ -87,7 +87,7 @@
   top: 0%;
   padding: 1rem 0;
   margin-left: 0.875 rem;
-  background-color: #ffffff;
+  background-color: #fcf9d5;
   border-radius: 3px 3px 0 0;
   color: #184d47;
   text-align: center;
