--- a/src/ItemPage/ItemPage.module.css
+++ b/src/ItemPage/ItemPage.module.css
@@ -13,6 +13,7 @@
   display: flex;
   height: 100px;
   justify-content: space-between;
+  padding: 1rem 0 !important;
 }
 
 .OwnersSection .imgContainer {
@@ -73,10 +74,11 @@
 
 .CustomField {
   padding: 0.25rem 0.5rem;
+  display: flex !important;
 }
 
 .CustomField:focus {
   box-shadow: 0 0 0 3px rgba(129, 179, 149, 0.5);
-  border: none;
+  border: 1px solid rgba(129, 179, 149, 0.5);
   outline: none;
 }
