--- a/src/Headers/Headers.module.css
+++ b/src/Headers/Headers.module.css
@@ -44,7 +44,7 @@
   font-family: "Montserrat";
   font-weight: 600;
   font-size: 20px;
-  color: #f5f5f5;
+  color: #126244;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
